--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
 # --- General options --- #
 
 # Name of website
-title: My website
-
+title: Studio Krass
 # Short description of your site
 description: A virtual proof that I'm awesome
 
